Sync all content

--- a/content/resources/ps10.md
+++ b/content/resources/ps10.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 73abac88-dca8-2c7f-57bd-be466a9a5bc3
 resourcetype: Other
 title: ps10
 uid: 5bfa2f8d-ded7-b715-24e4-a64853423e09
