--- a/content/resources/ps12.md
+++ b/content/resources/ps12.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 73abac88-dca8-2c7f-57bd-be466a9a5bc3
 resourcetype: Other
 title: ps12
 uid: 9c5d5e84-d45e-7bdf-993f-345444d5c02d
