--- a/content/resources/ps11.md
+++ b/content/resources/ps11.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 73abac88-dca8-2c7f-57bd-be466a9a5bc3
 resourcetype: Other
 title: ps11
 uid: 2d613169-ce87-77f2-c2b7-24a49b49a6b5
