--- a/content/resources/q3.md
+++ b/content/resources/q3.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Exams
 parent_type: CourseSection
+parent_uid: 3ca78693-7c3c-657b-17df-50f07b16762e
 resourcetype: Other
 title: Code sample for quiz
 uid: 10c315d1-13f7-afd7-e7d0-53e0e620abfd
